force-app/main/default/objects/Audit_Event__c/Audit_Event__c.object-meta.xml
<CustomObject>
    <description>Append-only timeline of every action taken during an audit. Provides a complete, immutable record for regulator readiness and internal compliance. Records must NEVER be updated or deleted after creation.</description>
    <label>Audit Event</label>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>Audit Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>