force-app/main/default/objects/Audit_Event__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>User ID of the actor who performed this action, or SYSTEM for automated actions.</description>
    <inlineHelpText>The 18-character User ID of the person or process that triggered this event. Use SYSTEM for automated actions.</inlineHelpText>
    <label>Actor</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>