force-app/main/default/objects/Audit_Event__c/fields/Audit_Case__c.field-meta.xml
<CustomField>
    <fullName>Audit_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent audit case this event belongs to.</description>
    <inlineHelpText>The audit case this event is recorded against.</inlineHelpText>
    <label>Audit Case</label>
    <referenceTo>Audit_Case__c</referenceTo>
    <relationshipLabel>Audit Events</relationshipLabel>
    <relationshipName>Audit_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>