force-app/main/default/objects/Audit_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Classification of the audit event.</description>
    <inlineHelpText>Select the type of audit action being recorded.</inlineHelpText>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case_Created</fullName>
                <label>Case Created</label>
            </value>
            <value>
                <fullName>Case_Assigned</fullName>
                <label>Case Assigned</label>
            </value>
            <value>
                <fullName>Evidence_Linked</fullName>
                <label>Evidence Linked</label>
            </value>
            <value>
                <fullName>Facts_Reconstructed</fullName>
                <label>Facts Reconstructed</label>
            </value>
            <value>
                <fullName>Replay_Executed</fullName>
                <label>Replay Executed</label>
            </value>
            <value>
                <fullName>Finding_Created</fullName>
                <label>Finding Created</label>
            </value>
            <value>
                <fullName>Remediation_Requested</fullName>
                <label>Remediation Requested</label>
            </value>
            <value>
                <fullName>Evidence_Submitted</fullName>
                <label>Evidence Submitted</label>
            </value>
            <value>
                <fullName>Signoff_Completed</fullName>
                <label>Signoff Completed</label>
            </value>
            <value>
                <fullName>Case_Closed</fullName>
                <label>Case Closed</label>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>