force-app/main/default/objects/Audit_Event__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>JSON payload with event-specific details</description>
</CustomField>