force-app/main/default/objects/Audit_Event__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record ID</label>
    <type>Text</type>
    <length>18</length>
    <description>ID of the related record (Finding, Evidence, etc.)</description>
</CustomField>