force-app/main/default/objects/Audit_Event__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the audit event occurred.</description>
    <inlineHelpText>The date and time when this audit action was performed.</inlineHelpText>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>